// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`agent-pack planner snapshots > snapshot blocked missing-source plan 1`] = `
{
  "blockers": [
    "canonical_source_missing",
  ],
  "status": "blocked",
}
`;

exports[`agent-pack planner snapshots > snapshot diagnostics for malformed declaration 1`] = `
[
  {
    "code": "E_AGENT_PACK_DECL_PHASE_MALFORMED",
    "severity": "error",
  },
]
`;

exports[`agent-pack planner snapshots > snapshot executive agent-pack mapping plan 1`] = `
{
  "count": 1,
  "items": [
    {
      "packId": "executive_agent_pack_opencode_task",
      "packKind": "task",
      "status": "ready",
    },
  ],
}
`;

exports[`agent-pack planner snapshots > snapshot follow-up pack plan 1`] = `
{
  "packKind": "follow_up",
  "status": "ready",
}
`;

exports[`agent-pack planner snapshots > snapshot implementation pack plan 1`] = `
{
  "items": [
    {
      "packKind": "implementation",
      "sources": [
        {
          "kind": "canonical_markdown",
          "required": true,
        },
        {
          "kind": "document_descriptor",
          "required": true,
        },
        {
          "kind": "decision_register",
          "required": true,
        },
        {
          "kind": "assumption_register",
          "required": false,
        },
        {
          "kind": "risk_register",
          "required": true,
        },
        {
          "kind": "validation_finding",
          "required": false,
        },
      ],
      "status": "requires_review",
    },
  ],
}
`;

exports[`agent-pack planner snapshots > snapshot review pack plan 1`] = `
{
  "items": [
    {
      "packKind": "review",
      "sources": [
        {
          "kind": "canonical_markdown",
          "required": true,
        },
        {
          "kind": "document_descriptor",
          "required": true,
        },
        {
          "kind": "validation_finding",
          "required": true,
        },
        {
          "kind": "risk_register",
          "required": false,
        },
        {
          "kind": "open_question_register",
          "required": false,
        },
      ],
      "status": "ready",
    },
  ],
}
`;

exports[`agent-pack planner snapshots > snapshot stale canonical source plan 1`] = `
{
  "blockers": [
    "canonical_source_stale",
  ],
  "status": "blocked",
}
`;

exports[`agent-pack planner snapshots > snapshot standard agent pack plan summary 1`] = `
{
  "declarationCount": 1,
  "items": [
    {
      "action": "plan_bundle",
      "packId": "review-pack",
      "packKind": "review",
      "status": "ready",
      "title": "Review thesis document",
    },
  ],
  "profileId": "standard",
}
`;
